# start-my-agent

./: .env.example  .gitignore  .gitmessage.txt  AGENTS.md  LICENSE  README.md  README.rulesets.md  pyproject.toml  requirements.txt  test_encoding.py
.history/learning/notes/: 第一章 初识智能体_20260403134504.md  第一章 初识智能体_20260403134652.md  第三章 大语言模型基础_20260403134001.md
.sisyphus/rulesets/: basic-ruleset.json
examples/: README.md  basic_agent_usage.py
learning/chapter3/: chapter3_guide.md
learning/docs/chapter1/: chapter1_guide.md
learning/notes/: 常用命令.md  第三章 大语言模型基础.md  第五章 基于低代码平台的智能体搭建.md  第六章 框架开发实践.md  第四章 智能体经典范式构建.md
practice/chapters/chapter1/: system_prompt.py
practice/chapters/chapter3/: byte_pair_encoding.py  exercise_for_llm.py  transformer.py  use_llm.py
practice/common/util/: markdown_reader.py
practice/examples/: README.md  basic_agent_usage.py  local_llm_demo.py  transformer_bpe_demo.py
project/: README.md
src/startmyagent/: AGENTS.md
src/startmyagent/chapters/: AGENTS.md
src/startmyagent/chapters/chapter1/: system_prompt.py
src/startmyagent/chapters/chapter3/: exercise_for_llm.py  transformer.py
src/startmyagent/chapters/chapter3/prompt/: system_prompt.md
src/startmyagent/chapters/chapter4/: Plan_and_solve.py  ReActAgent.py  Reflection.py  Tools.py  llm_client.py
src/startmyagent/chapters/chapter6/AgentScopeDemo/: auto_gen_software_team.py  game_roles.py  main_cn.py  prompt_cn.py  structured_output_cn.py  utils_cn.py
src/startmyagent/chapters/chapter6/AutoGenDemo/: auto_gen_software_team.py  conversation_monitor.py  output_v1.py
src/startmyagent/chapters/chapter6/AutoGenDemo/output_v2/: app.py  config.py  crypto_data.py
src/startmyagent/chapters/chapter6/CAMEL/: DigitalBookWriting.py
src/startmyagent/chapters/chapter6/Langgraph/: Dialogue_System.py
src/startmyagent/common/util/: markdown_reader.py  print_utils.py
src/startmyagent/examples/: basic_agent_usage.py  local_llm_demo.py  transformer_bpe_demo.py
start_my_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_basic.py
